k8s/overlays/server/api-production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-api
  namespace: pong
spec:
  template:
    spec:
      containers:
        - name: api
          args:
            - --mode=lobby
            - --namespace=pong
            - --room-image=ghcr.io/macel94/cloudnativepong-room:sha-c7b81721d66cc72a84733025f8ec392247082936
            - --db-path=/data/pong.db
