k8s/overlays/server/api-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-api
  namespace: pong
spec:
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 128Mi
