k8s/overlays/server/stateless-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-gateway
  namespace: pong
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-static
  namespace: pong
spec:
  replicas: 2
